[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Mechanics/Attacks/DownLight/DownLight.gd" type="Script" id=1]
[ext_resource path="res://sprites/attack.png" type="Texture" id=2]
[ext_resource path="res://src/Mechanics/Attacks/DownLight/hit.tres" type="Animation" id=3]

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 6.0
height = 34.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Coll:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Coll:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 25 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Coll:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="DownLight" type="Area2D"]
script = ExtResource( 1 )

[node name="Coll" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 20, 25 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 50, 25 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Target" type="Position2D" parent="."]
position = Vector2( 0, -1 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/hit = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimPlayer" to="." method="_AnimPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_Timer_timeout"]
